# src/routes/taskRoutes.ts
@@ -1,0 +1,11 @@
+import { Router } from "express";
+import LabelController from "../controllers/taskController";
+import { authorize } from "../middlewares";
+
+const taskRoutes = Router()
+
+taskRoutes.use(authorize)
+
+taskRoutes.post('/', LabelController.storeTask)
+
+export default taskRoutes;
